Add struct and typedef examples and only UTF-8 string examples